# artwork-analysis

./: .gitignore  pyproject.toml
src/: explore_data.py  model.py  tpu-test.py
